--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,19 @@ charset-normalizer==3.3.1
 click==8.1.7
 Flask==3.0.0
 idna==3.4
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+numpy==1.26.1
+packaging==23.2
+pandas==2.1.2
+pluggy==1.3.0
+pytest==7.4.3
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
+six==1.16.0
+tzdata==2023.3
 urllib3==2.0.7
 Werkzeug==3.0.1
